--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
 		<section class="banner-section">
 		<img src="img/banner.svg">
 		</section>
+		<div class="wrapper">
+			<h4 class="title-h4"><span>Featured</span> view all featured media</h4>
+			<div class="wrapper-box">
+				<div class="box">
+					<h5 class="title-h5">Responsive Web Design</h5>
+					<img class="icon" src="img/image1.svg">
+					<p class="text">
+						approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.
+					</p>
+				</div>
+				<div class="box">
+					<h5 class="title-h5">App Development</h5>
+					<img class="icon" src="img/image2.svg">
+					<p class="text">
+						Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.
+					</p>
+				</div>
+			</div>
+		</div>
 		<footer class="footer">
 			<ul class="social-ul">
 				<li class="social-li">
